--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         </div>
         </li>
       <li class="nav-item">
+        <a class="nav-link" href="https://cdn.rawgit.com/sqrcube/cubemate/ef07d7f6/cubemate.html">cubemate</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="stuff.html">Stuff</a>
       </li>
     </ul>
