--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
   Under Construction! Mobile site might still look a bit strange.
 </div>
 
-<!--<div class="card bg-primary text-white">
-  <h4 class="card-header">Featured</h4>
+<div class="card bg-success text-white">
+  <h4 class="card-header">News</h4>
    <div class="card-body">
-    <h4 class="card-title">Special title treatment</h4>
-     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <h4 class="card-title">cubemate</h4>
+     <p class="card-text">A program for learning and practicing algs. Work in progress.</p>
   </div>
   <div class="card-footer text-muted">
-    10 October 2017
+    20 December 2017
   </div>
-</div>-->
+</div>
 <p></p>
 <div class="card bg-primary text-white">
   <h4 class="card-header">News</h4>
