--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
   <h4 class="card-header">News</h4>
    <div class="card-body">
     <h4 class="card-title">cubemate</h4>
-     <p class="card-text">A program for learning and practicing algs. Work in progress.</p>
+     <p class="card-text">A program for learning and practicing algs. Work in progress. Try it <a href="https://cdn.rawgit.com/sqrcube/cubemate/ef07d7f6/cubemate.html">here</a></p>
   </div>
-  <div class="card-footer text-muted">
+  <div class="card-footer text-white">
     20 December 2017
   </div>
 </div>
